// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should summarize 1 expense properly 1`] = `
<div>
  <p>
    Viewing 
    1
     expense 
    totalling 
    $0.00
  </p>
</div>
`;

exports[`should summarize 2 expenses properly 1`] = `
<div>
  <p>
    Viewing 
    2
     expenses 
    totalling 
    $0.00
  </p>
</div>
`;
